<resources>
    <string name="app_name">Meus Clientes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cliente</string>
    <string name="nav_header_subtitle">Profº Marco Maddo</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Sair</string>

    <string name="modelo_fragment">Cliente VIP DEMO</string>
    <string name="listar_clientes_fragment">Lista de Clientes</string>

    <!-- Opções do Menu Lateral Drawer -->
    <string name="add_cliente">Adicionar Cliente</string>
    <string name="add_cliente_card">Adicionar Cliente (Card)</string>
    <string name="titulo_preto">Preto</string>
    <string name="fragmento_vermelho">Fragmento Vermelho</string>
    <string name="titulo_vermelho">Vermelho</string>
    <string name="fragmento_azul">Fragmento Azul</string>
    <string name="titulo_azul">Azul</string>

    <!-- Opções do Menu Principal -->
    <string name="meu_perfil">Meu Perfil</string>
    <string name="cadastro_cliente">Cadastro Cliente</string>
    <string name="listar_cliente">Listar Clientes</string>
    <string name="listar_cliente_cards">Listar Clientes (CARDS)</string>

    <!-- Cadastro Cliente -->

    <string name="adicionar_novo_cliente">Adicionar Novo Cliente</string>
    <string name="perfil_e_contato">Perfil e Contato</string>
    <string name="logradouro">Logradouro</string>

</resources>
