<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_add_cliente"
            android:icon="@drawable/ic_item_menu_padrao"
            android:title="@string/add_cliente" />

        <item android:id="@+id/nav_listar_clientes"
            android:icon="@drawable/ic_item_menu_padrao"
            android:title="@string/listar_cliente" />


        <item android:id="@+id/nav_listar_cliente_cards"
            android:icon="@drawable/ic_item_menu_padrao"
            android:title="@string/listar_cliente_cards" />

        <item android:id="@+id/nav_add_cliente_cards"
            android:icon="@drawable/ic_item_menu_padrao"
            android:title="@string/add_cliente_card" />


    </group>

</menu>
