<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/branco"
    tools:context=".AdicionarClienteFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="4dp"
                app:cardElevation="8dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/txtTitulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:gravity="center"
                        android:text="@string/add_cliente_card"
                        android:textColor="@color/branco"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="19dp"
                app:cardCornerRadius="8dp"

                app:cardElevation="10dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:gravity="center"
                        android:text="@string/perfil_e_contato"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editNomeCompleto"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:hint="Nome Completo"
                        android:textColor="@color/preto"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editTelefone"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:hint="Telefone"
                        android:inputType="phone"
                        android:textColor="@color/preto"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editEmail"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:hint="Email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/preto"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="4dp"
                app:cardElevation="10dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:gravity="center"
                        android:text="@string/logradouro"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editCep"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:hint="CEP"
                        android:inputType="number"
                        android:textColor="@color/preto"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editLogradouro"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:hint="Logradouro"
                        android:textColor="@color/preto"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editNumero"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:hint="Número"
                        android:textColor="@color/preto"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editBairro"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:hint="Bairro"
                        android:textColor="@color/preto"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editCidade"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:hint="Cidade"
                        android:textColor="@color/preto"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editEstado"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:hint="Estado"
                        android:textColor="@color/preto"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/chkTermosUso"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="left"
                        android:text="Termos de Uso"
                        android:textColor="@color/preto"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.cardview.widget.CardView>



                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="48dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnCancelar"
                        style="@style/BotaoCustomizado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="CANCELAR" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSalvar"
                        style="@style/BotaoCustomizado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="SALVAR" />

                </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>
</FrameLayout>
